--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,22 @@
 #
 #    pip-compile --pre
 #
-cython==3.0.9
+cython==3.0.11
     # via -r requirements.in
-numpy==2.0.0b1
+numpy==2.1.2
     # via
     #   -r requirements.in
+    #   pykalman
     #   scipy
-pykalman==0.9.5
+pykalman==0.9.7
     # via -r requirements.in
 python-graph-core==1.8.2
     # via -r requirements.in
-scipy==1.13.0rc1
+scipy==1.14.1
+    # via
+    #   -r requirements.in
+    #   pykalman
+ujson==5.10.0
     # via -r requirements.in
-ujson==5.9.0
-    # via -r requirements.in
-uvloop==0.19.0
+uvloop==0.21.0b1
     # via -r requirements.in
